<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/singup_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundloginpage"
    tools:context=".singup.presentation.ui.SingupActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="315dp"
        android:layout_height="104dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/jua_regular"
        android:text="@string/registrarse_y_empezar_a_transferir"
        android:textColor="@color/black"
        android:textSize="32sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/jua_regular"
        android:text="@string/nombre"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputName"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="69dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:textColorHint="@color/blackopacity" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="315dp"
            android:layout_height="49dp"
            android:fontFamily="@font/jua_regular"
            android:hint="@string/ingresar_nombre"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewLastName"
        android:layout_width="49dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/jua_regular"
        android:text="@string/apellido"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutLastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputName"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutLastName"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="29dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputName"
        android:textColorHint="@color/blackopacity"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="315dp"
            android:layout_height="49dp"
            android:fontFamily="@font/jua_regular"
            android:hint="@string/ingresar_apellido"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="34dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/jua_regular"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutLastName"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="33dp"
        android:background="@color/white"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/blackopacity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutLastName">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jua_regular"
            android:hint="@string/ingresar_tu_email"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/jua_regular"
        android:text="@string/contrasena"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTextPassword3"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="33dp"

        android:background="@color/white"
        android:ems="10"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        android:textColorHint="@color/blackopacity">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="315dp"
            android:layout_height="49dp"
            android:fontFamily="@font/jua_regular"
            android:hint="@string/ingresa_tu_contrasena"
            android:textSize="14sp"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/create_account_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rectangle"
        android:fontFamily="@font/jua_regular"
        android:text="@string/crear_cuenta"
        android:textSize="14sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

    <TextView
        android:id="@+id/login_account_singup"
        android:layout_width="144dp"
        android:layout_height="21dp"

        android:layout_marginStart="115dp"


        android:layout_marginTop="24dp"


        android:layout_marginEnd="113dp"
        android:fontFamily="@font/jua_regular"
        android:text="@string/ya_tienes_una_cuenta"

        android:textAlignment="center"
        android:textColor="@color/celsteoscuro"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account_final" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/jua_regular"

        android:text="@string/reingresar_contrase_a"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginStart="30dp"
        android:layout_marginTop="33dp"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3"
        android:textColorHint="@color/blackopacity"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="315dp"
            android:layout_height="49dp"
            android:fontFamily="@font/jua_regular"
            android:hint="@string/reingresar_contrasena"
            android:textSize="14sp"
            />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
